crates/moss/tests/snapshots/cli_snapshots__help_daemon_run.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 190
expression: "snapshot_help(&[\"daemon\", \"run\"])"
---
Run the daemon in foreground (for debugging)

Usage: moss daemon run [OPTIONS]

Options:
      --json       Output as JSON
      --jq <EXPR>  Filter JSON output with jq expression (implies --json)
      --pretty     Human-friendly output with colors and formatting
      --compact    Compact output without colors (overrides TTY detection)
  -h, --help       Print help
