crates/moss/tests/snapshots/cli_snapshots__help_edit_replace.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 128
expression: "snapshot_help(&[\"edit\", \"replace\"])"
---
Replace target with new content

Usage: moss edit replace [OPTIONS] <CONTENT>

Arguments:
  <CONTENT>  New content to replace with

Options:
  -r, --root <ROOT>        Root directory (defaults to current directory)
      --dry-run            Dry run - show what would be changed without applying
      --exclude <EXCLUDE>  Exclude files matching patterns or aliases (e.g., @tests, *.test.js)
      --only <ONLY>        Only include files matching patterns or aliases
      --multiple           Allow glob patterns to match multiple symbols
  -m, --message <MESSAGE>  Message describing the edit (for shadow git history) [aliases: --reason]
      --json               Output as JSON
      --jq <EXPR>          Filter JSON output with jq expression (implies --json)
      --pretty             Human-friendly output with colors and formatting
      --compact            Compact output without colors (overrides TTY detection)
  -h, --help               Print help
