crates/moss/tests/snapshots/cli_snapshots__help_generate_types.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 407
expression: "snapshot_help(&[\"generate\", \"types\"])"
---
Generate types from JSON Schema (legacy)

Usage: moss generate types [OPTIONS] --lang <LANG> <SCHEMA>

Arguments:
  <SCHEMA>  JSON Schema file

Options:
  -n, --name <NAME>      Root type name [default: Root]
  -l, --lang <LANG>      Target language: typescript, python, rust
  -o, --output <OUTPUT>  Output file (stdout if not specified)
      --json             Output as JSON
      --jq <EXPR>        Filter JSON output with jq expression (implies --json)
      --pretty           Human-friendly output with colors and formatting
      --compact          Compact output without colors (overrides TTY detection)
  -h, --help             Print help
